[package]
name = "sol-bridge-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "~1.14.0"
solana-client = "~1.14.0"
solana-program = "~1.14.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
config = "0.13"
